# aslam_optimizer

./: .gitignore  README.md  dependencies.rosinstall  stack.xml
aslam_backend/: CMakeLists.txt  manifest.xml  notes.txt  package.xml
aslam_backend/include/aslam/backend/: BlockCholeskyLinearSolverOptions.h  BlockCholeskyLinearSystemSolver.hpp  CacheInterface.hpp  Cholmod.hpp  CompressedColumnJacobianTransposeBuilder.hpp  CompressedColumnMatrix.hpp  DenseMatrix.hpp  DenseQRLinearSolverOptions.h  DenseQrLinearSystemSolver.hpp  DesignVariable.hpp  DesignVariableAdapter.hpp  DogLegTrustRegionPolicy.hpp  ErrorTerm.hpp  ErrorTermDs.hpp  GaussNewtonTrustRegionPolicy.hpp  JacobianBuilder.hpp  JacobianContainer.hpp  JacobianContainerDense.hpp  JacobianContainerPrescale.hpp  JacobianContainerSparse.hpp  LeapFrog.hpp  LevenbergMarquardtTrustRegionPolicy.hpp  LineSearch.hpp  LineSearchTrustRegionPolicy.hpp  LinearSystemSolver.hpp  MEstimatorPolicies.hpp  MarginalizationPriorErrorTerm.hpp  Marginalizer.hpp  Matrix.hpp  MatrixStack.hpp  NonSquaredErrorTerm.hpp  OptimizationProblem.hpp  OptimizationProblemBase.hpp  Optimizer.hpp  Optimizer2.hpp  Optimizer2Options.hpp  OptimizerBFGS.hpp  OptimizerBase.hpp  OptimizerCallback.hpp  OptimizerCallbackManager.hpp  (+22 more)
aslam_backend/src/: BlockCholeskyLinearSolverOptions.cpp  BlockCholeskyLinearSystemSolver.cpp  DenseQRLinearSolverOptions.cpp  DenseQrLinearSystemSolver.cpp  DesignVariable.cpp  DogLegTrustRegionPolicy.cpp  ErrorTerm.cpp  ErrorTermDs.cpp  GaussNewtonTrustRegionPolicy.cpp  JacobianContainer.cpp  JacobianContainerDense.cpp  JacobianContainerSparse.cpp  LeapFrog.cpp  LevenbergMarquardtTrustRegionPolicy.cpp  LineSearch.cpp  LineSearchTrustRegionPolicy.cpp  LinearSystemSolver.cpp  MEstimatorPolicies.cpp  MarginalizationPriorErrorTerm.cpp  Marginalizer.cpp  Matrix.cpp  NonSquaredErrorTerm.cpp  OptimizationProblem.cpp  OptimizationProblemBase.cpp  Optimizer.cpp  Optimizer2.cpp  OptimizerBFGS.cpp  OptimizerBase.cpp  OptimizerCallbackManager.cpp  OptimizerMultistart.cpp  OptimizerRprop.cpp  OptimizerSgd.cpp  ProbDataAssocPolicy.cpp  ProblemManager.cpp  SamplerBase.cpp  SamplerHmc.cpp  SamplerHybridMcmc.cpp  SamplerMcmc.cpp  SamplerMetropolisHastings.cpp  ScalarNonSquaredErrorTerm.cpp  (+8 more)
aslam_backend/src/util/: ProblemManager.cpp  ThreadedRangeProcessor.cpp
aslam_backend/test/: CallbackTest.cpp  CompressedColumnMatrixTest.cpp  DummyDesignVariable.hpp  ErrorTermTests.cpp  JacobianContainer.cpp  LinearSolverTests.cpp  MatrixStackTest.cpp  ProbDataAssocPolicyTest.cpp  SampleDvAndError.hpp  TestErrorTermTester.cpp  TestLineSearch.cpp  TestOptimizationProblem.cpp  TestOptimizer.cpp  TestOptimizer2.cpp  TestOptimizerBFGS.cpp  TestOptimizerBase.cpp  TestOptimizerMultistart.cpp  TestOptimizerRprop.cpp  TestOptimizerSgd.cpp  TestOptimizerSupport.cpp  TestOptimizerSupport.hpp  TestProblemManager.cpp  TestSamplerMcmc.cpp  test_main.cpp
aslam_backend_expressions/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
aslam_backend_expressions/include/aslam/backend/: BasisMatrixFunctor.hpp  CacheExpression.hpp  CameraDesignVariable.hpp  DesignVariableGenericVector.hpp  DesignVariableMappedVector.hpp  (+46 more)
aslam_backend_expressions/src/: ErrorTermEuclidean.cpp  ErrorTermTransformation.cpp  EuclideanDirection.cpp  EuclideanExpression.cpp  EuclideanExpressionNode.cpp  EuclideanPoint.cpp  ExpressionNodeVisitor.cpp  HomogeneousExpression.cpp  HomogeneousExpressionNode.cpp  HomogeneousPoint.cpp  KinematicChain.cpp  L1Regularizer.cpp  MappedEuclideanPoint.cpp  MappedHomogeneousPoint.cpp  MappedRotationQuaternion.cpp  MatrixBasic.cpp  MatrixExpression.cpp  MatrixExpressionNode.cpp  MatrixTransformation.cpp  RotationExpression.cpp  RotationExpressionNode.cpp  RotationQuaternion.cpp  RotationScalarExpressionNode.cpp  Scalar.cpp  ScalarExpression.cpp  ScalarExpressionNode.cpp  ToTextNodeVisitor.cpp  TransformationBasic.cpp  TransformationExpression.cpp  TransformationExpressionNode.cpp  Vector2RotationQuaternionExpressionAdapter.cpp
aslam_backend_expressions/test/: ErrorTest_Euclidean.cpp  ErrorTest_L1Regularizer.cpp  ErrorTest_Transformation.cpp  EuclideanExpression.cpp  ExpressionNodeVisitorTest.cpp  ExpressionUtils.cpp  FixedPointNumberTest.cpp  GenericMatrixExpression.cpp  HomogeneousExpression.cpp  KinematicChain.cpp  MatrixAndEuclideanExpression.cpp  Profiling.cpp  QuaternionExpression.cpp  RotationExpression.cpp  ScalarExpression.cpp  VectorExpressionTest.cpp  test_main.cpp
aslam_backend_python/: CMakeLists.txt  manifest.xml  package.xml
aslam_backend_python/python/aslam_backend/: __init__.py
aslam_backend_python/src/: Backend.cpp  BackendExpressions.cpp  CameraGeometries.cpp  CameraGeometry.cpp  CameraProjections.cpp  DesignVariable.cpp  ErrorTerm.cpp  ErrorTermTransformation.cpp  Frame.cpp  JacobianContainer.cpp  LeapFrog.cpp  MEstimators.cpp  OptimizationProblem.cpp  Optimizer.cpp  OptimizerCallback.cpp  OptimizerOptions.cpp  PinholeCameraDesignVariables.cpp  PinholeRSCameraGeometry.cpp  ProblemManager.cpp  SampleDvAndError.cpp  Sampler.cpp  ScalarNonSquaredErrorTerm.cpp  SparseBlockMatrix.cpp  TrustRegionPolicies.cpp  module.cpp
aslam_backend_python/test/: Test.py
aslam_backend_tutorial/: CMakeLists.txt  manifest.xml  package.xml
aslam_backend_tutorial/python/aslam_backend_tutorial/: __init__.py
aslam_backend_tutorial/python_example/: example.py
aslam_backend_tutorial/src/: ErrorTermMotion.cpp  ErrorTermObservation.cpp  ErrorTermPrior.cpp  ScalarDesignVariable.cpp
aslam_backend_tutorial/test/: ErrorTests.cpp
aslam_backend_tutorial/tex/: backend.tex
sparse_block_matrix/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
sparse_block_matrix/include/sparse_block_matrix/: csparse_helper.h  linear_solver_cholmod.h  linear_solver_csparse.h  linear_solver_dense.h  linear_solver_spqr.h  marginal_covariance_cholesky.h  sparse_block_matrix.h  sparse_helper.h
sparse_block_matrix/src/: csparse_helper.cpp
sparse_block_matrix/src/sparse_block_matrix/: __init__.py
sparse_block_matrix/test/: solver_tests.cpp  sparse_block_matrix_tests.cpp
(+72 files in other folders)
