<?xml version="1.0"?>
<package>
  <name>sparse_block_matrix</name>
  <version>0.0.1</version>
  <description>sparse_block_matrix</description>

  <maintainer email="paul.furgale@mavt.ethz.ch">Author</maintainer>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <!-- List dependencies to system libs and other catkin packages here. -->
  <build_depend>sm_common</build_depend>
  <build_depend>sm_eigen</build_depend>
  <build_depend>python_module</build_depend>
  <build_depend>suitesparse</build_depend>
  <build_depend>eigen</build_depend>
</package>